# langchain-advanced

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/agents/: linkedin.py
src/basics/: chat.py
src/basics/prompt-templates/: basic.py  chat-prompt-template.py
src/chat/: basic.py
src/services/: linkedin.py
src/tools/: tavily.py
